--- a/thesis/results/comparison_results_table.tex
+++ b/thesis/results/comparison_results_table.tex
@@ -1,12 +1,12 @@
 \begin{longtable}{llrll}
 \caption{Collapsed vs k-way Algorithm Comparison Results} \label{tab:comparison_results} \\
 \toprule
-Model & Algorithm & k & \% Change & p-value \\
+Model & Algorithm & k & Speedup & p-value \\
 \midrule
 \endfirsthead
 \caption[]{Collapsed vs k-way Algorithm Comparison Results} \\
 \toprule
-Model & Algorithm & k & \% Change & p-value \\
+Model & Algorithm & k & Speedup & p-value \\
 \midrule
 \endhead
 \midrule
@@ -15,40 +15,40 @@ Model & Algorithm & k & \% Change & p-value \\
 \endfoot
 \bottomrule
 \endlastfoot
-armadillo & bsah & 4 & -0.4 & 3.17e-01 \\
-stanford-bunny & bsah & 4 & -0.2 & 2.82e-01 \\
-suzanne & bsah & 4 & 0.0 & 9.17e-01 \\
-teapot & bsah & 4 & 0.1 & 8.32e-02 \\
-armadillo & median & 4 & 0.0 & 8.59e-01 \\
-stanford-bunny & median & 4 & 0.4 & 3.61e-01 \\
-suzanne & median & 4 & -0.0 & 4.51e-01 \\
-teapot & median & 4 & -0.0 & 7.00e-01 \\
-armadillo & sah & 4 & 0.1 & 6.64e-01 \\
-stanford-bunny & sah & 4 & 0.0 & 9.84e-01 \\
-suzanne & sah & 4 & 0.1 & 2.64e-01 \\
-teapot & sah & 4 & 0.0 & 7.09e-01 \\
-armadillo & bsah & 8 & 0.1 & 2.16e-01 \\
-stanford-bunny & bsah & 8 & 0.1 & 6.28e-01 \\
-suzanne & bsah & 8 & 0.2 & 3.62e-01 \\
-teapot & bsah & 8 & 0.1 & 2.32e-01 \\
-armadillo & median & 8 & 0.1 & 6.77e-02 \\
-stanford-bunny & median & 8 & 0.1 & 2.94e-01 \\
-suzanne & median & 8 & -0.1 & 2.47e-01 \\
-teapot & median & 8 & 0.0 & 9.99e-01 \\
-armadillo & sah & 8 & -0.0 & 8.13e-01 \\
-stanford-bunny & sah & 8 & -0.0 & 8.89e-01 \\
-suzanne & sah & 8 & -0.0 & 7.74e-01 \\
-teapot & sah & 8 & -0.1 & 8.66e-02 \\
-armadillo & bsah & 16 & -0.0 & 7.03e-01 \\
-stanford-bunny & bsah & 16 & 0.2 & 9.08e-02 \\
-suzanne & bsah & 16 & -0.1 & 2.10e-01 \\
-teapot & bsah & 16 & -0.0 & 6.03e-01 \\
-armadillo & median & 16 & 0.0 & 6.27e-01 \\
-stanford-bunny & median & 16 & 0.1 & 1.81e-01 \\
-suzanne & median & 16 & 0.0 & 5.89e-01 \\
-teapot & median & 16 & -0.0 & 8.13e-01 \\
-armadillo & sah & 16 & -0.1 & 4.44e-01 \\
-stanford-bunny & sah & 16 & 0.1 & 6.51e-02 \\
-suzanne & sah & 16 & 0.1 & 1.32e-01 \\
-teapot & sah & 16 & 0.0 & 9.22e-01 \\
+armadillo & bsah & 4 & 1.004 & 3.17e-01 \\
+stanford-bunny & bsah & 4 & 1.002 & 2.82e-01 \\
+suzanne & bsah & 4 & 1.000 & 9.17e-01 \\
+teapot & bsah & 4 & 0.999 & 8.32e-02 \\
+armadillo & median & 4 & 1.000 & 8.59e-01 \\
+stanford-bunny & median & 4 & 0.996 & 3.61e-01 \\
+suzanne & median & 4 & 1.000 & 4.51e-01 \\
+teapot & median & 4 & 1.000 & 7.00e-01 \\
+armadillo & sah & 4 & 0.999 & 6.64e-01 \\
+stanford-bunny & sah & 4 & 1.000 & 9.84e-01 \\
+suzanne & sah & 4 & 0.999 & 2.64e-01 \\
+teapot & sah & 4 & 1.000 & 7.09e-01 \\
+armadillo & bsah & 8 & 0.999 & 2.16e-01 \\
+stanford-bunny & bsah & 8 & 0.999 & 6.28e-01 \\
+suzanne & bsah & 8 & 0.998 & 3.62e-01 \\
+teapot & bsah & 8 & 0.999 & 2.32e-01 \\
+armadillo & median & 8 & 0.999 & 6.77e-02 \\
+stanford-bunny & median & 8 & 0.999 & 2.94e-01 \\
+suzanne & median & 8 & 1.001 & 2.47e-01 \\
+teapot & median & 8 & 1.000 & 9.99e-01 \\
+armadillo & sah & 8 & 1.000 & 8.13e-01 \\
+stanford-bunny & sah & 8 & 1.000 & 8.89e-01 \\
+suzanne & sah & 8 & 1.000 & 7.74e-01 \\
+teapot & sah & 8 & 1.001 & 8.66e-02 \\
+armadillo & bsah & 16 & 1.000 & 7.03e-01 \\
+stanford-bunny & bsah & 16 & 0.998 & 9.08e-02 \\
+suzanne & bsah & 16 & 1.001 & 2.10e-01 \\
+teapot & bsah & 16 & 1.000 & 6.03e-01 \\
+armadillo & median & 16 & 1.000 & 6.27e-01 \\
+stanford-bunny & median & 16 & 0.999 & 1.81e-01 \\
+suzanne & median & 16 & 1.000 & 5.89e-01 \\
+teapot & median & 16 & 1.000 & 8.13e-01 \\
+armadillo & sah & 16 & 1.001 & 4.44e-01 \\
+stanford-bunny & sah & 16 & 0.999 & 6.51e-02 \\
+suzanne & sah & 16 & 0.999 & 1.32e-01 \\
+teapot & sah & 16 & 1.000 & 9.22e-01 \\
 \end{longtable}
