doc: some changes

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -541,7 +541,7 @@ Alle Graphen:
 Was wurde wie gemacht -> pipeline
 
 \section{Korrektheit}
-Die visuelle Ausgabe der Testruns ist für die jeweiligen Testszenen über alle möglichen Konstruktionsparameter konstant. Somit wird immer das gleiche Ergebnis geliefert 
+Die visuelle Ausgabe der Testruns ist für die jeweiligen Testszenen über alle möglichen Konstruktionsparameter konstant. Somit wird immer das gleiche Ergebnis geliefert. Zudem wird die reale Laufzeit mit der prognostizierten asympthotischen worst-case Laufzeit verglichen.
 
 \section{Traversal}
 - Hypothese Traversalzeiten ändern sich abhängig von k
